# llm-cost-optimizer

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: routing_config.yaml
src/: __init__.py  analytics.py  app.py  budget_manager.py  cost_tracker.py  models.py  router.py
tests/: test_analytics.py  test_budget_manager.py  test_cost_tracker.py  test_router.py
